syntax = "proto3";
option java_multiple_files = true;

package com.example.grpcserver.hello;

message HelloRequest {
  optional string firstName = 1;
  optional string lastName = 2;
}

message HelloResponse {
  optional string greeting = 1;
}

service HelloService {
  rpc hello(HelloRequest) returns (HelloResponse);
}

